<resources>
    <string name="app_name">FireChat</string>
    <string name="action_settings">Settings</string>
    <string name="login_phone_number">Phone number</string>
    <string name="login_phone_desc">We will send an SMS with a confirmation code to your phone number.</string>
    <string name="verification_code">Verification code</string>
    <string name="code_support_text">A verification code has been sent to %s.</string>
    <string name="phone_number_error">Invalid phone number! Please double check it!</string>
    <string name="phone_number_toolbar">Your Phone Number</string>
    <string name="activation_code_resend">You can resend activation code in %s seconds.</string>
    <string name="resend_code_button">Resend Code</string>
    <string name="resend_success">Verification code has been resend!</string>
    <string name="invalid_code">Invalid verification code!</string>
    <string name="denied_permission">You\'ve denied the permission!</string>
    <string name="chats_toolbar_title">Chats</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="logout_menu_option">Logout</string>
    <string name="invalid_phone_number_error">Invalid phone number format! Please use international format, like +380 98 111 1111.</string>
    <string name="conversation_start">Start a chat</string>
    <string name="name_title">Your name</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="required_error">Required field!</string>
    <string name="sign_up_finish_text">Please enter your first name to finish the sign up, started earlier.</string>
    <string name="no_contacts">None of your contacts are using FireChat, or you\'ve denied the permission to read them!</string>
    <string name="your_message">Your Message</string>
    <string name="empty_history">No messages here yet…</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="open">Open</string>
    <string name="gallery">Gallery</string>
    <string name="delete">Remove</string>
    <string name="select_gallery_pic">Select Picture</string>
    <string name="yourself_chat">Yourself</string>
    <string name="online">Online</string>
    <string name="last_seen">Last seen %s</string>
    <string name="at_date">at</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="bio">Bio</string>
    <string name="photo">Photo</string>
    <string name="username_length_error">Username must contain at least 5 characters.</string>
    <string name="invalid_username_error">Invalid username. Please read the rules below!</string>
    <string name="username_in_use_error">Username is already in use</string>
    <string name="username_info">You can choose a username on <b>FireChat</b>. If you do, other people will be able to find you by this username and contact you
        without knowing your phone number.\n\nYou can use <b>a-z, 0-9</b> and underscores.\nMinimum length is <b>5 characters.</b></string>
    <string name="bio_info">Any details such as your age, occupation or city.\nExample: 23 y.o. designer from San Francisco.</string>
    <string name="bio_max_length">Max length reached!</string>
    <string name="none">None</string>
    <string name="file">File</string>
    <string name="camera">Camera</string>
    <string name="search">Search</string>
    <string name="no_conversation">No conversations found. Let\'s start chatting!</string>
    <string name="search_hint">Username</string>
</resources>
