<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tarasbarabash.firechat.ViewModel.CodeVM" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/phone_number_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.tarasbarabash.firechat.Fragment.LoginFragment">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vc_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/phone_info_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verification_code"
                    android:inputType="phone"
                    android:maxLength="6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <requestFocus />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/phone_info_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@{String.format(@string/code_support_text, viewModel.phoneNumber)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toTopOf="@+id/resend_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="A verification code has been sent to +1 654 787 15 47." />

            <TextView
                android:id="@+id/resend_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toBottomOf="@+id/resend_button"
                app:layout_constraintEnd_toStartOf="@+id/resend_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/resend_button"
                tools:text="@string/activation_code_resend" />

            <Button
                android:id="@+id/resend_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:enabled="false"
                android:onClick="@{() -> viewModel.resendCode()}"
                android:text="@string/resend_code_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/resend_text" />
        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>